# tinySensor

./: .clang-format  .coveralls.yml  .gitignore  .gitmodules  .travis.yml  AUDIT_TECH_DEBT.md  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  TinySensor.atsln  TinySensor.componentinfo.xml  TinySensor.cppproj  avrdude.conf  config.h  init_avr.sh  main.cpp  platformio.ini  startContainer.sh
.circleci/: config.yml
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/workflows/: main.yml
.rbd/: config.yml  plan-files.yml
TinySensor/: 11refCalibration.cpp  Arduino.h  TinyI2CMaster.cpp  TinyI2CMaster.h  TinySensor.atsln  TinySensor.componentinfo.xml  TinySensor.cppproj  bh1750.cpp  bh1750.h  main.cpp
audits/: exclusions.yml
busses/wire/USI_TWI_Master/: USI_TWI_Master.h  usi_io.h
busses/wire/USI_TWI_Slave/: USI_TWI_Slave.h  usi_io.h
docs/: analysis-2026-06-18.md  architecture.md  environments.md
hardware/: .gitignore
hardware/bmx-18650/bmx-18650/: bmx-18650-cache.lib  bmx-18650.cir  bmx-18650.kicad_pcb  bmx-18650.kicad_prl  bmx-18650.kicad_pro  bmx-18650.kicad_sch  bmx-18650.net  bmx-18650.pro  bmx-18650.sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware/kicad/: fp-lib-table  sym-lib-table  tinySensorv1-cache.lib  tinySensorv1-rescue.lib  tinySensorv1.kicad_pcb  tinySensorv1.pro  tinySensorv1.sch
hardware/tinysensor/: fp-info-cache  fp-lib-table  sym-lib-table  tinySensorv1-cache.lib  tinySensorv1-rescue.lib  tinySensorv1.cir  tinySensorv1.kicad_pcb  tinySensorv1.kicad_prl  tinySensorv1.kicad_pro  tinySensorv1.kicad_sch  tinySensorv1.net  tinySensorv1.pro  tinySensorv1.sch  tinySensorv1.xml
include/: Arduino.h  Attiny84aHal.h  BMx280.h  Ds18b20.h  TinySensor.h  config.h  hal.h  readVcc.h  x10.h
include/protocol/: Oregon.h  Oregon.hpp  Oregon_v2.h  Oregon_v3.h
lib/LacrosseWS7000/: LacrosseWS7000.cpp  LacrosseWS7000.h
lib/analogFiltering/: AnalogFilter.h  analogFilter.cpp
lib/conversionTools/: conversionTools.h
lib/hal/: ATtiny84aHal.h  Atmega328pHal.cpp  Atmega328pHal.h  Attiny84aHal.cpp  Attiny84aHal.h  Hal.h  NativeHal.cpp  NativeHal.h  TestHal.cpp  TestHal.h
lib/oregon/: Oregon_v3.cpp  Oregon_v3.h
lib/softSerial/: SoftSerial.cpp  SoftSerial.h
lib/softareSerial/: SoftwareSerial.cpp  SoftwareSerial.h
lib/utils/include/: AnalogFilter.h  conversionTools.h
lib/utils/src/: AnalogFilter.cpp  conversionTools.cpp
lib/x10/: x10rf.cpp  x10rf.h
protocol/: Oregon.cpp  Oregon.h  oregon.h
requirements/: configuration.md  functional.md  performance.md  platform.md  technical.md  ui.md
scripts/: docker-run  docker-stopAndPurge  flash_tinySensor  init.bat  init_avr.sh  waitForUpload
sensors/bme280/: SparkFunBME280.cpp  SparkFunBME280.h
shared/: extra_script.py
src/: Attiny84aHal.cpp  base.cpp  main.cpp  mainWrapper.cpp  readVCC.cpp
src/protocol/: Oregon.cpp  Oregon_v3.cpp
test/: oregonTest.cpp  tinySensorModelTest.cpp
test/led/: ledTest.cpp
test/oregon/: oregonLibTest.cpp
test/power/: powerTest.cpp
test/test_analogFiltering/: analogFilteringTest.cpp
test/test_busses/: bussesTest.cpp
test/test_conversionTools/: conversionToolsTest.cpp
test/test_ds18b20/: ds18b20Test.cpp
test/test_lacrosseWS7000/: LacrosseWS7000Test.cpp
test/test_led/: ledTest.cpp
test/test_oregon/: oregonLibTest.cpp
test/test_power/: powerTest.cpp
test/test_x10/: x10LibTest.cpp
test/test_x10_hal/: x10HalTimingTest.cpp
tests/: firstTest.cpp
web/: build.php  index.html
